# angewandte

./: .gitignore  README.md
backend/: .env.example  README.md  __main__.py  app.py  db.py  embeddings.py  indexer.py  llm.py  models.py  processing.py  pyproject.toml  routes_answers.py  settings.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: api.ts
frontend/src/lib/stores/: chat.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/upload/: +page.svelte
